<resources>
    <string name="app_name">BilboStories</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Ajustes</string>
    <string name="title_activity_login">Conectar</string>
    <string name="nUsuario">Nombre de usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="login">Conectar</string>
    <string name="want_notifications">¿Desea recibir notificaciones?</string>
    <string name="errorLogin">El usuario o la contraseña son incorrectos.</string>
    <string name="title_activity_regist">Registrarse</string>
    <string name="cancelar">Cancelar</string>
    <string name="errorReg">Ha ocurrido un error o el nombre escogido ya está en uso.</string>
    <string name="nombre_vacio">Es necesario introducir un nombre de usuario.</string>
    <string name="pass_vacia">Es necesario introducir una contraseña.</string>
    <string name="title_activity_nueva_historia">Nueva historia</string>
    <string name="title_activity_ver_historia">Ver historia</string>
    <string name="drawer_open">Navigation Drawer abierto</string>
    <string name="drawer_close">Navigation Drawer cerrado</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo">Título</string>
    <string name="addimagen">Añadir Imagen</string>
    <string name="descripcion">Descripción</string>
    <string name="etiquetas">Etiquetas (Separadas por comas)</string>
    <string name="crearhistoria">Crear Historia</string>
    <string name="ups">Ups</string>
    <string name="aceptar">Aceptar</string>
    <string name="camposincorrectos">Alguno de los campos obligatorios está vacío.</string>
    <string name="aviso">Aviso</string>
    <string name="cerrarSesion">¿Seguro que quieres cerrar sesión?</string>
    <string name="seleccionfuentefoto">¿Desde dónde desea obtener la imagen?</string>
    <string name="camara">Cámara</string>
    <string name="galeria">Galería</string>
    <string name="nofotos">Incluya alguna imagen para poder continuar.</string>
    <string name="actionNuevaHistoria">Crear Nueva Historia</string>
    <string name="contrasenasNoCoinciden">Las contraseñas nuevas no coinciden o la contraseña antigua es incorrecta.</string>
    <string name="errorHistoria">Error, no se ha podido guardar la historia.</string>
    <string name="exitoHistoria">La historia se ha guardado correctamente.</string>
    <string name="errorGaleria">No se ha podido acceder a la galería de fotos.</string>
    <string name="errorCamara">No se ha podido acceder a la cámara.</string>
    <string name="preparandoImagenes">Preparando las imágenes para el envío.</string>
    <string name="subiendoHistoria">Guardando la historia en el servidor.</string>
    <string name="imagenResError">Fallo al procesar la imagen.</string>
    <string name="izquierda"><![CDATA[<-]]></string>
    <string name="derecha"><![CDATA[->]]></string>
    <string name="descargandoImagenes">Descargando imágenes.</string>
    <string name="datos_cambiados">Los datos se han actualizado correctamente.</string>
    <string name="actualizar">Actualizar</string>
    <string name="cambiar_pass">Cambio de contraseña:</string>
    <string name="cambiar_pref">Cambio de preferencias:</string>
    <string name="comentar">Comentar</string>
    <string name="intrdatos">Introduce un nombre de usuario y una contraseña</string>
    <string name="comentario">Comentario</string>
    <string name="comentarios">Comentarios:</string>
    <string name="descripcion2">Descripción:</string>
</resources>
