<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.das.das_grupo.SignInActivity"
    android:background="#ffffffff">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textSize="40dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/intrdatos"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:elegantTextHeight="false"
            android:textSize="18dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal" />

        <EditText android:hint="@string/nUsuario" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id = "@+id/usuarioSing"/>

        <EditText android:hint="@string/contrasena" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id = "@+id/contrasenaSing"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/want_notifications"
            android:id="@+id/checkAvisosSing" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/btSingInSing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse" />

        <Button
            android:id="@+id/btCancelarSing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:visibility="invisible" />

    </LinearLayout>

</ScrollView>
