<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.das.das_grupo.LoginActivity">

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

        <EditText android:hint="@string/nUsuario" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/usuarioLog"/>

    <EditText android:hint="@string/contrasena" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id = "@+id/contrasenaLog"/>

    <Button
    android:id="@+id/btLogInLog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login" />

    <Button
    android:id="@+id/btRegistrarseLog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/registrarse" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:id="@+id/imageView"
            android:src="@drawable/bilbaostoriesportada" />

    </LinearLayout>
</ScrollView >
