<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.das.das_grupo.NuevaHistoriaActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="3dp"
        android:layout_alignParentEnd="false"
        android:id="@+id/historia">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titulo"
            android:inputType="text"
            android:hint="@string/titulo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addimagen"
            android:id="@+id/addimagen"
            android:layout_gravity="center_horizontal" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/horizontalScrollView" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fotos">

            </LinearLayout>
        </HorizontalScrollView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/descripcion"
            android:hint="@string/descripcion"
            android:gravity="top" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/etiquetas"
            android:hint="@string/etiquetas"
            android:gravity="top" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crearhistoria"
            android:id="@+id/crear"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</RelativeLayout>
