<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="org.das.das_grupo.PreferenciasFragment"
    android:fillViewport="false" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffffff">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cambiar_pass"
            android:id="@+id/textView" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/contraAntPref"
            android:hint="Contraseña antigua" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/contraNuev1Pref"
            android:hint="Introduce nueva contraseña" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/contraNueva2Pref"
            android:layout_gravity="center_horizontal"
            android:hint="Repite nueva contraseña" />

        <TextView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cambiar_pref"
            android:id="@+id/textView5" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_gravity="center_horizontal" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/want_notifications"
            android:id="@+id/avisosPref"
            android:checked="false" />

        <Button
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actualizar"
            android:id="@+id/cambiarPref" />
    </LinearLayout>
</ScrollView>
